--- a/htmlstuff.htm
+++ b/htmlstuff.htm
@@ -24,19 +24,17 @@
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#"
-                >YourName</a
+                >YourHome</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
+              <a class="nav-link" href="#">Name</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Pricing</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled"
-                >Disdryhydfhgdfghdfghdfghdfghdfghfdghfabled</a
-              >
+              <a class="nav-link disabled">git</a>
             </li>
           </ul>
         </div>
